# ytcli

./: .gitignore  README.md  music_cli.py  music_tui.py  musicd.py  pyproject.toml  requirements.txt
